--- a/package.json
+++ b/package.json
@@ -5,26 +5,30 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "build": "tsc -b && vite build",
+    "gh-pages": "tsc -b && vite build && vite preview",
+    "lint": "biome check ./src",
+    "lint:fix": "biome check --write ./src",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "clsx": "^1.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "clsx": "^2.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "soundfont-player": "^0.12.0",
-    "styled-components": "^5.3.6",
-    "use-immer": "^0.7.0"
+    "styled-components": "^6.1.19",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@biomejs/biome": "2.3.11",
+    "@types/node": "^25.0.3",
+    "@types/bun": "^1.3.5",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/styled-components": "^5.1.26",
-    "@vitejs/plugin-react": "^2.1.0",
-    "prettier": "2.7.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "babel-plugin-react-compiler": "^1.0.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0"
   }
 }
