--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "clsx": "^2.1.1",
+    "motion": "^12.23.26",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "soundfont-player": "^0.12.0",
